feat: advanced duration interval and plugin system

--- a/locales/fa.json
+++ b/locales/fa.json
@@ -1,4 +1,10 @@
 {
   "months": ["فروردین","اردیبهشت","خرداد","تیر","مرداد","شهریور","مهر","آبان","آذر","دی","بهمن","اسفند"],
-  "weekdays": ["یکشنبه","دوشنبه","سه‌شنبه","چهارشنبه","پنجشنبه","جمعه","شنبه"]
+  "weekdays": ["یکشنبه","دوشنبه","سه‌شنبه","چهارشنبه","پنجشنبه","جمعه","شنبه"],
+  "durationUnits": {
+    "day": " روز",
+    "hour": " ساعت",
+    "minute": " دقیقه",
+    "second": " ثانیه"
+  }
 }
