--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,10 @@
 {
   "months": ["January","February","March","April","May","June","July","August","September","October","November","December"],
-  "weekdays": ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"]
+  "weekdays": ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+  "durationUnits": {
+    "day": "d",
+    "hour": "h",
+    "minute": "m",
+    "second": "s"
+  }
 }
